ffmpeg: better CFR frame duplication selection

This improves the handling of cases where the frame duration is not known

Fixes Ticket 4119
Fixes Ticket 1578

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>